@startuml 07 - Package: like

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageBackgroundColor LightYellow
skinparam packageBorderColor Red
skinparam nodesep 60
skinparam ranksep 50

package "like" {
  class ReviewLike << @Entity >> {
    - user: User
    - review: Review
  }

  class CommentLike << @Entity >> {
    - user: User
    - comment: Comment
  }

  class LikeController << @RestController >> {
    - likeService: LikeService
    + likeReview(reviewId: UUID, principal: UserPrincipal): ResponseEntity<Void>
    + unlikeReview(reviewId: UUID, principal: UserPrincipal): ResponseEntity<Void>
    + likeComment(commentId: UUID, principal: UserPrincipal): ResponseEntity<Void>
    + unlikeComment(commentId: UUID, principal: UserPrincipal): ResponseEntity<Void>
  }

  class LikeService {
    - reviewLikeRepository: ReviewLikeRepository
    - commentLikeRepository: CommentLikeRepository
    - userService: UserService
    - reviewService: ReviewService
    - commentService: CommentService
    + likeReview(reviewId: UUID, user: User): void
    + unlikeReview(reviewId: UUID, user: User): void
    + likeComment(commentId: UUID, user: User): void
    + unlikeComment(commentId: UUID, user: User): void
  }

  interface ReviewLikeRepository << JpaRepository >> {
    + existsByUserIdAndReviewId(userId: UUID, reviewId: UUID): boolean
    + deleteByUserIdAndReviewId(userId: UUID, reviewId: UUID): void
    + countByReviewId(reviewId: UUID): long
  }

  interface CommentLikeRepository << JpaRepository >> {
    + existsByUserIdAndCommentId(userId: UUID, commentId: UUID): boolean
    + deleteByUserIdAndCommentId(userId: UUID, commentId: UUID): void
    + countByCommentId(commentId: UUID): long
  }
}

' External references
class UserService << user package >>
class ReviewService << review package >>
class CommentService << comment package >>
class User << user package >>
class Review << review package >>
class Comment << comment package >>

ReviewLike --> User
ReviewLike --> Review
CommentLike --> User
CommentLike --> Comment

LikeController --> LikeService
LikeService --> ReviewLikeRepository
LikeService --> CommentLikeRepository
LikeService --> UserService : findEntityById
LikeService --> ReviewService : findEntityById
LikeService --> CommentService : findEntityById

note bottom of ReviewLike
  unique constraint:
  (user_id, review_id)
end note

note bottom of CommentLike
  unique constraint:
  (user_id, comment_id)
end note

note right of LikeService
  countBy...() dos repositories
  alimenta o likeCount nos
  DTOs de ReviewResponse
  e CommentResponse
end note

@enduml
